# mchgeo

./: README.md  generate.py  request.http  requirements.txt  setup.cfg  shapely.ipynb
mchgeo/: __init__.py  _api.py  _constants.py
mchgeo/data/: de-envelops.json  de-geometry.json
src/: README.md  fetch.py  pyproject.toml
