[metadata]
name = mchgeo-aphecetche
version = 0.0.1
author = Laurent Aphecetche
author_email = laurent.aphecetche@gmail.com
description = CERN Alice MCH Geometry
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nantes-m2-rps-exp/mchgeo
project_urls =
    Bug Tracker = https://github.com/nantes-m2-rps-exp/mchgeo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src