[metadata]
name = mchgeo
version = 0.1.2
author = Laurent Aphecetche
author_email = laurent.aphecetche@gmail.com
description = Alice MCH Geometry
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nantes-m2-rps-exp/mchgeo
project_urls =
    Bug Tracker = https://github.com/nantes-m2-rps-exp/mchgeo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
requires =
  importlib
include_package_data = True